# cvdepth

./: CMakeLists.txt  main.cpp
OpenCV/: setup_vars_opencv4.cmd
OpenCV/cmake/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
OpenCV/include/opencv2/: cvconfig.h
OpenCV/lib/: opencv_calib3d440.lib  opencv_core440.lib  opencv_dnn440.lib  opencv_features2d440.lib  opencv_flann440.lib  opencv_gapi440.lib  opencv_highgui440.lib  opencv_imgcodecs440.lib  opencv_imgproc440.lib  opencv_ml440.lib  opencv_objdetect440.lib  opencv_photo440.lib  opencv_stitching440.lib  opencv_video440.lib  opencv_videoio440.lib
OpenCV/python/cv2/: config-3.py  config.py
shaders/: quad.frag  quad.vert
